--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react-native": "0.68.2",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-size-matters": "^0.4.0",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0"
