--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.67.6",
     "react-test-renderer": "^17.0.2",
+    "redux-mock-store": "^1.5.4",
     "typescript": "~4.3.5"
   },
   "scripts": {
@@ -38,7 +39,9 @@
   "name": "mcdonalds",
   "jest": {
     "preset": "@testing-library/react-native",
-    "setupFilesAfterEnv": ["@testing-library/jest-native/extend-expect"],
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ],
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
     ]
