--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@reduxjs/toolkit": "^1.8.3",
+    "axios": "^0.27.2",
     "expo": "^45.0.0",
     "jest": "^26.6.3",
     "jest-expo": "^45.0.1",
